--- a/services.html
+++ b/services.html
@@ -52,6 +52,15 @@
                             <button type="button" class="button call-btn" href="#" data-toggle="modal" data-target="appointmentModal">Записаться</button>
                         </li>
                     </ul>
+                    <ul class="header__social mobile">
+                        <li><a href="https://www.facebook.com/perfecthealthyhair.uz/" aria-label="facebook" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="https://www.instagram.com/perfecthair.uz/" aria-label="instagram" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://t.me/perfecthairuz" aria-label="telegram" target="_blank"><i class="fab fa-telegram"></i></a></li>
+                    </ul>
+                    <ul class="header__contacts mobile">
+                        <li><a href="mailto:perfecthair@mail.ru"><i class="fas fa-envelope"></i>perfecthair@mail.ru</a></li>
+                        <li><a href="tel:+998951981400"><i class="fas fa-phone"></i>+99895 198 14 00</a></li>
+                    </ul>
                 </nav>
                 <div class="burger mobile">
                     <input type="checkbox" id="burgerBtn" class="burger-checkbox">
