--- a/news.html
+++ b/news.html
@@ -52,6 +52,15 @@
                             <button type="button" class="button call-btn" href="#" data-toggle="modal" data-target="appointmentModal">Записаться</button>
                         </li>
                     </ul>
+                    <ul class="header__social mobile">
+                        <li><a href="https://www.facebook.com/perfecthealthyhair.uz/" aria-label="facebook" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="https://www.instagram.com/perfecthair.uz/" aria-label="instagram" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://t.me/perfecthairuz" aria-label="telegram" target="_blank"><i class="fab fa-telegram"></i></a></li>
+                    </ul>
+                    <ul class="header__contacts mobile">
+                        <li><a href="mailto:perfecthair@mail.ru"><i class="fas fa-envelope"></i>perfecthair@mail.ru</a></li>
+                        <li><a href="tel:+998951981400"><i class="fas fa-phone"></i>+99895 198 14 00</a></li>
+                    </ul>
                 </nav>
                 <div class="burger mobile">
                     <input type="checkbox" id="burgerBtn" class="burger-checkbox">
@@ -187,25 +196,42 @@
 <section class="gallary bg-aqua">
     <div class="container">
         <h2 class="title wow animate__fadeIn">Наши работы</h2>
-        <div class="gallary__wrapper wow animate__fadeIn" data-wow-delay="0.1s">
-            <a class="gallary__item" data-fslightbox="gallery" href="./images/gallary/gallary-1.png">
-                <img src="./images/gallary/gallary-1.png" alt="gallary">
-            </a>
-            <a class="gallary__item" data-fslightbox="gallery" href="./images/gallary/gallary-2.jpg">
-                <img src="./images/gallary/gallary-2.jpg" alt="gallary">
-            </a>
-            <a class="gallary__item" data-fslightbox="gallery" href="./images/gallary/gallary-3.png">
-                <img src="./images/gallary/gallary-3.png" alt="gallary">
-            </a>
-            <a class="gallary__item" data-fslightbox="gallery" href="./images/gallary/gallary-4.jpg">
-                <img src="./images/gallary/gallary-4.jpg" alt="gallary">
-            </a>
-            <a class="gallary__item" data-fslightbox="gallery" href="./images/gallary/gallary-1.png">
-                <img src="./images/gallary/gallary-1.png" alt="gallary">
-            </a>
-            <a class="gallary__item" data-fslightbox="gallery" href="./images/gallary/gallary-2.jpg">
-                <img src="./images/gallary/gallary-2.jpg" alt="gallary">
-            </a>            
+        <div class="gallary__slider">
+            <div class="swiper-container">
+                <div class="gallary__wrapper swiper-wrapper wow animate__fadeIn" data-wow-delay="0.1s">
+                    <a class="swiper-slide gallary__item" data-fslightbox="gallery" href="./images/gallary/gallary-1.png">
+                        <img src="./images/gallary/gallary-1.png" alt="gallary">
+                    </a>
+                    <a class="swiper-slide gallary__item" data-fslightbox="gallery" href="./images/gallary/gallary-2.jpg">
+                        <img src="./images/gallary/gallary-2.jpg" alt="gallary">
+                    </a>
+                    <a class="swiper-slide gallary__item" data-fslightbox="gallery" href="./images/gallary/gallary-3.png">
+                        <img src="./images/gallary/gallary-3.png" alt="gallary">
+                    </a>
+                    <a class="swiper-slide gallary__item" data-fslightbox="gallery" href="./images/gallary/gallary-4.jpg">
+                        <img src="./images/gallary/gallary-4.jpg" alt="gallary">
+                    </a>
+                    <a class="swiper-slide gallary__item" data-fslightbox="gallery" href="./images/gallary/gallary-1.png">
+                        <img src="./images/gallary/gallary-1.png" alt="gallary">
+                    </a>
+                    <a class="swiper-slide gallary__item" data-fslightbox="gallery" href="./images/gallary/gallary-2.jpg">
+                        <img src="./images/gallary/gallary-2.jpg" alt="gallary">
+                    </a>
+                </div>
+            </div>
+            <div class="slider__controls">
+                <button type="button" class="slider__button slider__button-prev">
+                    <svg width="10" height="16" viewBox="0 0 10 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M7.87484 0.083313L9.1665 1.37498L2.5415 7.99998L9.1665 14.625L7.87484 15.9166L-0.000163078 7.99998L7.87484 0.083313Z"></path>
+                    </svg>
+
+                </button>
+                <button type="button" class="slider__button slider__button-next">
+                    <svg width="10" height="16" viewBox="0 0 10 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M2.12516 0.083313L0.833496 1.37498L7.4585 7.99998L0.833496 14.625L2.12516 15.9166L10.0002 7.99998L2.12516 0.083313Z"></path>
+                    </svg>
+                </button>
+            </div>
         </div>
     </div>
 </section>
