--- a/news_item.html
+++ b/news_item.html
@@ -77,28 +77,25 @@
         </div>
     </div>
 </header>
-<main class="main about-page">
-<section class="page__hero" style="background-image: url('./images/hero/service-hero.png');">
+<main class="main news-page">
+<section class="news">
     <div class="container">
-        <h1>Трихология</h1>
-    </div>
-</section>
-
-
-<section class="service">
-    <div class="container">
-        <div class="service__wrapper">
-            <div class="service__content">
-                <p><strong>ТРИХОСКОПИЯ</strong> – это высокотехнологическая диагностика состояния волос и кожи головы. Проблемный участок обследуется с помощью специального прибора – трихоскопа. Трихоскоп оборудован мощной оптической системой, выводящей изображение на экран компьютера с многократным увеличением (до 1000 раз).</p>
-                <p><strong>ДЕРМАТОСКОПИЯ</strong> – диагностика состояния кожи головы и волос с помощью цифровой системы диагностики. Такое исследование открывает новые возможности для правильного и своевременного постановленного диагноза, при назначение лечения и для профилактики заболеваний кожи головы и волос.</p>
-                <p><strong>ПЛАЗМОТЕРАПИЯ (ПЛАЗМОЛИФТИНГ)</strong> – это одна из новейших методик в области косметологии, инъекционная процедура, предполагающая подкожное введение обогащенной тромбоцитами плазмы собственной крови пациента. За рубежом метод носит название PRP- терапия. Тромбоциты, как известно, содержат факторы роста, отвечающие не только за свертывание крови, но и за рост и регенерацию молодой ткани.</p>
-                <p><strong>МЕЗОТЕРАПИЯ ДЛЯ ВОЛОС</strong> - это современная методика, направленная на оздоровление кожи волосистой части головы. Инъекционная мезотерапия представляет собой введение различных полезных веществ в средние слои кожи, доставляя их необходимое количество напрямую к волосяным луковицам.</p>
-                <p><strong>УФО ПУВА терапия волос</strong> - это</p>
-                <p><strong>НИЗКОИНТЕНСИВНАЯ ЛАЗЕРНАЯ ТЕРАПИЯ ВОЛОС</strong> — метод лечения, используемый в качестве дополнительного к традиционным методам лечения волос. Он был использован в Европе уже более 30 лет и в настоящее время используется в США. Это безболезненный и нетоксичный метод, который не имеет задокументированных побочных эффектов.</p>
+        <div class="news__wrapper">
+            <div class="news__single">
+               <h2>Lorem ipsum dolor sit amet</h2>
+                <img src="./images/gallary/gallary-1.png" alt="">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio beatae mollitia expedita, perspiciatis accusantium ab voluptatum, pariatur deleniti voluptas consequuntur culpa, quae iure rerum corporis natus accusamus? Incidunt, velit recusandae.</p>
+                <p>Voluptatum fugit autem vero quae veritatis, ullam quidem consequatur nesciunt quasi, laudantium, quod adipisci perferendis aliquam voluptatibus, alias tenetur provident libero. Vitae voluptatem impedit id eius doloremque, commodi corrupti atque.</p>
+                <p>Voluptates veritatis tenetur eveniet, fugit, distinctio accusamus consectetur tempore! Praesentium, architecto, et. Numquam dolorum nulla doloribus ipsum porro esse harum eligendi pariatur obcaecati praesentium temporibus enim, explicabo fugit recusandae eaque?</p>
+                <ul>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis esse atque, excepturi praesentium sunt unde aut porro laudantium, placeat harum, officia adipisci aperiam odio dignissimos alias iste cupiditate sit consequatur.</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis esse atque, excepturi praesentium sunt unde aut porro laudantium, placeat harum, officia adipisci aperiam odio dignissimos alias iste cupiditate sit consequatur.</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis esse atque, excepturi praesentium sunt unde aut porro laudantium, placeat harum, officia adipisci aperiam odio dignissimos alias iste cupiditate sit consequatur.</li>
+                </ul>
             </div>
             <div class="widget">
                 <div class="widget__block">
-                    <h3>Прочие услуги</h3>
+                    <h3>Услуги</h3>
                     <ul class="services__list">
                         <li><a href="#">Трихология</a></li>
                         <li><a href="#">Косметология</a></li>
@@ -145,120 +142,6 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-        </div>
-
-    </div>
-</section>
-<section class="gallary bg-aqua">
-    <div class="container">
-        <h2 class="title wow animate__fadeIn">Наши работы</h2>
-        <div class="gallary__slider">
-            <div class="swiper-container">
-                <div class="gallary__wrapper swiper-wrapper wow animate__fadeIn" data-wow-delay="0.1s">
-                    <a class="swiper-slide gallary__item" data-fslightbox="gallery" href="./images/gallary/gallary-1.png">
-                        <img src="./images/gallary/gallary-1.png" alt="gallary">
-                    </a>
-                    <a class="swiper-slide gallary__item" data-fslightbox="gallery" href="./images/gallary/gallary-2.jpg">
-                        <img src="./images/gallary/gallary-2.jpg" alt="gallary">
-                    </a>
-                    <a class="swiper-slide gallary__item" data-fslightbox="gallery" href="./images/gallary/gallary-3.png">
-                        <img src="./images/gallary/gallary-3.png" alt="gallary">
-                    </a>
-                    <a class="swiper-slide gallary__item" data-fslightbox="gallery" href="./images/gallary/gallary-4.jpg">
-                        <img src="./images/gallary/gallary-4.jpg" alt="gallary">
-                    </a>
-                    <a class="swiper-slide gallary__item" data-fslightbox="gallery" href="./images/gallary/gallary-1.png">
-                        <img src="./images/gallary/gallary-1.png" alt="gallary">
-                    </a>
-                    <a class="swiper-slide gallary__item" data-fslightbox="gallery" href="./images/gallary/gallary-2.jpg">
-                        <img src="./images/gallary/gallary-2.jpg" alt="gallary">
-                    </a>
-                </div>
-            </div>
-            <div class="slider__controls">
-                <button type="button" class="slider__button slider__button-prev">
-                    <svg width="10" height="16" viewBox="0 0 10 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M7.87484 0.083313L9.1665 1.37498L2.5415 7.99998L9.1665 14.625L7.87484 15.9166L-0.000163078 7.99998L7.87484 0.083313Z"></path>
-                    </svg>
-
-                </button>
-                <button type="button" class="slider__button slider__button-next">
-                    <svg width="10" height="16" viewBox="0 0 10 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M2.12516 0.083313L0.833496 1.37498L7.4585 7.99998L0.833496 14.625L2.12516 15.9166L10.0002 7.99998L2.12516 0.083313Z"></path>
-                    </svg>
-                </button>
-            </div>
-        </div>
-    </div>
-</section>
-<section class="consultation" style="background-image: url('./images/consultation-bg.webp');">
-    <div class="container">
-        <div class="consultation__wrapper">
-            <div class="consultation__left">
-                <h2>Предоставляем бесплатную консультацию</h2>
-                <p>Ваше здоровье - наш главный приоритет.</p>
-            </div>
-            <div class="consultation__right">
-                <button type="button" class="button" href="#" data-toggle="modal" data-target="appointmentModal">Записаться</button>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="reviews">
-    <div class="container">
-        <h2 class="title wow animate__fadeIn">Отзывы наших клиентов</h2>
-        <div class="reviews__slider wow animate__fadeIn" data-wow-delay="0.3s">
-            <div class="swiper-container">
-                <div class="reviews__wrapper swiper-wrapper">
-                    <div class="reviews__item swiper-slide">
-                        <p class="reviews__img">
-                            <img src="./images/reviews/reviews-1.webp" alt="Author">
-                        </p>
-                        <div class="reviews__content">
-                            <i class="fas fa-quote-left"></i>
-                            <p class="reviews__text">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                            <p class="reviews__author">Mark Huff</p>
-                            <span class="reviews__position">Students</span>
-                        </div>
-                    </div>
-                    <div class="reviews__item swiper-slide">
-                        <p class="reviews__img">
-                            <img src="./images/reviews/reviews-2.webp" alt="Author">
-                        </p>
-                        <div class="reviews__content">
-                            <i class="fas fa-quote-left"></i>
-                            <p class="reviews__text">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                            <p class="reviews__author">Mark Huff</p>
-                            <span class="reviews__position">Students</span>
-                        </div>
-                    </div>
-                    <div class="reviews__item swiper-slide">
-                        <p class="reviews__img">
-                            <img src="./images/reviews/reviews-3.webp" alt="Author">
-                        </p>
-                        <div class="reviews__content">
-                            <i class="fas fa-quote-left"></i>
-                            <p class="reviews__text">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                            <p class="reviews__author">Mark Huff</p>
-                            <span class="reviews__position">Students</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="slider__controls">
-                <button type="button" class="slider__button slider__button-prev">
-                    <svg width="10" height="16" viewBox="0 0 10 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M7.87484 0.083313L9.1665 1.37498L2.5415 7.99998L9.1665 14.625L7.87484 15.9166L-0.000163078 7.99998L7.87484 0.083313Z"></path>
-                    </svg>
-
-                </button>
-                <button type="button" class="slider__button slider__button-next">
-                    <svg width="10" height="16" viewBox="0 0 10 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M2.12516 0.083313L0.833496 1.37498L7.4585 7.99998L0.833496 14.625L2.12516 15.9166L10.0002 7.99998L2.12516 0.083313Z"></path>
-                    </svg>
-                </button>
             </div>
         </div>
 
